hphp/test/zend/bad/ext/mysqli/tests/mysqli_class_mysqli_result_reflection.php
<?php
	require_once('reflection_tools.inc');
	$class = new ReflectionClass('mysqli_result');
	inspectClass($class);
	print "done!";
?>